code25_all/scala/15267235.txt
 """\w""".

TAB
+                     asInstanceOf          charAt                   
codePointAt           codePointBefore        
codePointCount        compareTo             compareToIgnoreCase       
concat                contains              ....

.r
.r
import scala.util.matching._
"""\p{L}""".

TAB
scala> """\p{L}""".<console>:1: error: unclosed multi-line string literal
"""
^

